--- a/R/A02_Data_and_Tools.Rmd
+++ b/R/A02_Data_and_Tools.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Portfoliomanagement and Financial Analysis - Assignment 2"
 subtitle: "Submit until Monday 2020-09-28, 13:00"
-author: "Lastname, Surname"
+author: "Markovic, Mitschel"
 output: html_notebook
 ---
 
@@ -12,15 +12,294 @@ pacman::p_load(tidyverse,tidyquant,FFdownload,tsibble)
 
 **Please** remember to put your assignment solutions in `rmd` format using **many** chunks and putting readable text in between, similar to my examples given in Research Methods and Assignment 1! Also, each student has to select his own set of 10 stocks having data available as of `2000-01-01`. Select by Sharpe-ratio, dominance or any other method (e.g. matching your first name).
 
+My stocks are Amazon, Apple, McDonald´s Corporation, The Coca-Cola Company, The Goldman Sachs Group, Walmart, 3M Company, Nike and Johnson & Johnson.
+
+```{r}
+mult_stocks <- tq_get(c("AMZN","AAPL","MSFT","MCD","KO","GS","WMT","MMM","NKE","JNJ"),get = "stock.prices",from = "2000-01-01", to = "2020-09-24")
+```
+
 ## Exercise 1: Performance Analysis of Portfolios
 
 Create (using four of the ten stocks) multiple portfolios using `tq_portfolio()`:
 
+My Choice is McDonald´s, The Coca-Cola Company, Walmart and 3M.
+
+```{r}
+Ra <- c("MCD","KO","WMT","MMM") %>% tq_get(get= "stock.prices", from ="2000-01-01", to = "2020-09-24") %>% group_by(symbol) %>% tq_transmute(select = adjusted, mutate_fun = periodReturn, period ="yearly",col_rename = "Ra")
+```
+
+
+Due to the amount of data, an yearly approach was chosen here.
+
+```{r}
+Rb <- "^GSPC" %>% tq_get(get = "stock.prices", from = "2000-01-01", to = "2020-09-24") %>% tq_transmute(select = adjusted, mutate_fun = periodReturn, period ="yearly", col_rename = "Rb")
+```
+
+Combining the two data sets "date" and "left_join" from "dplyr" package.
+
+```{r}
+RaRb <- left_join(Ra, Rb, by = c("date" = "date"))
+CAPM <- RaRb %>% tq_performance(Ra = Ra, Rb = Rb, performance_fun = table.CAPM)
+```
+
+Here are weights of the portfolio defined. Equally weighted are chosen. 
+
+```{r}
+wts <- c(0.25,0.25,0.25,0.25)
+wts_map <- tibble(symbols =c("MCD","KO","WMT","MMM"), weights = c(wts))
+```
+
 *  an equally weighted one, 
+
+```{r}
+equally_weighted <- Ra %>% tq_portfolio(assets_col = symbol, returns_col = Ra, weights = wts_map, col_rename = "Ra")
+RaRb_single_portfolio <- left_join(equally_weighted, Rb, by ="date")
+Overview_CAPM <- RaRb_single_portfolio %>% tq_performance(Ra=Ra, Rb = Rb, performance_fun = table.CAPM)
+tq_performance_fun_options()#For more Options or analysis
+```
+
 *  a market-value weighted one, and 
+market value of my four stocks is 852.93 Billon Dollar
+McDonald´s (162,348B) => 0.19
+The Coca-Cola Company (209,274B) => 0.25
+Walmart (388,989B) => 0.46
+3M (92,319B) => 0.10
+
+```{r}
+market_wts <-c(0.19, 0.25, 0.46, 0.10)
+market_wts_map <- tibble(symbols =c("MCD","KO","WMT","MMM"), weights = c(market_wts))
+market_weighted <- Ra %>% tq_portfolio(assets_col = symbol, returns_col = Ra, weights = market_wts_map, col_rename = "Ra")
+RaRb_market_portfolio <- left_join(market_weighted, Rb, by ="date")
+Market_Overview_CAPM <- RaRb_market_portfolio %>% tq_performance(Ra=Ra, Rb = Rb, performance_fun = table.CAPM)
+```
+
 *  one where you create a trading strategy according to [https://www.datacamp.com/community/tutorials/r-trading-tutorial](https://www.datacamp.com/community/tutorials/r-trading-tutorial) - use the tools in the tidyquant package!! Trade your four stocks in a way that Portfolios weights (in sum) do never exceed +-1.
 
+```{r}
+stock.list <- 'https://www.loyal3.com/stocks' #Data Collection
+stocks <- read_html(stock.list)
+stocks.names <- html_nodes(stocks,'company-name')
+stocks.names <-html_text(stocks.names)
+loyal.links <- html_nodes(stocks, "a") #Connection to the webpage
+loyal.links <- html_attr(loyal.links, "href")
+stock.links <- paste0('http://www.loyal3.com',loyal.links [54:123])
+get.ticker <- function(url){ #getting the ticker symbols
+x<-read_html(url)
+x<-html_node(x,'.ticker-price')
+x<-html_text(x)
+x<-sub("^([[:alpha:]]*).*","\\1",x)
+return(x)
+}
+stock.tickers <- pblapply(stock.links,get.ticker) #is a list of individual stock tickers with each element corresponding
+stock.ticks <-do.call(rbind,stock.tickers) # Lastly create a data frame with the symbol and company name
+stock.ticks <-data.frame(symbol=stock,ticks, name =stocks.names)
+start.date <- Sys.Date()
+end.date <-Sys.Date()-years(20) #because I want data from 2000 until now
+start.date <- gsub('-','', start.date)
+end.date <- gsub('-','',end.date)
+stocks.ts <- pbapply(stock.ticks$symbol, getYahooData, end.date, start.date)
+names(stocks.ts) <- stock.ticks$symbol
+head(stocks.ts$WMT) #select what kind of stock you want for me the for I selected before
+plot(stocks.ts$WMT$Close)
+dygraph(stocks.ts$WMT$Close, main = "Walmart Stock Price") %>% dyRangeSelector(dateWindow =c("2000-01-01","2020-09-24"))
+```
+
+The trading strategy here is trend following.
+
+```{r}
+head(SMA(stocks.ts$WMT$Close,200))
+head(SMA(stocks.ts$WMT$Close,50))
+mov.avgs <- function(stock.df){
+stock.close <- stock.df[,4]
+ifelse((nrow(stock.df)<(2*260)),
+x<-data.frame(stock.df,'NA','NA'),
+x<-data.frame(stock.df, SMA(stock.close,200), SMA(stock.close,50)))
+colnames(x)<-c(names(stock.df),'sma_200','sma_50')
+x<-x[complete.cases(x$sma_200),]
+return(x)
+}
+stocks.ts <-pblapply(stocks,ts,mov.avgs)
+```
+
+With the strategy of following the trend, I try to increase the performance of the portfolio.
+
+```{r finding out about our own trading strategy}
+library(rvest)
+library(TTR)
+library(lubridate)
+
+#sma for producing moving averages of the stock prices --> all historical data has the same weight
+#for the comparison of the "trend following" trading strategy, moving averages are produced here
+
+sma_MCD <- SMA(MCD[, "close"], n=50)
+sma_KO <- SMA(KO[, "close"], n=50)
+sma_WMT <- SMA(WMT[, "close"], n=50)
+sma_MMM <- SMA(MMM[, "close"], n=50)
+
+sma_MCD_200 <- SMA(MCD[, "close"], n=200)
+sma_KO_200 <- SMA(KO[, "close"], n=200)
+sma_WMT_200 <- SMA(WMT[, "close"], n=200)
+sma_MMM_200 <- SMA(MMM[, "close"], n=200)
+
+#alternatively you could have also used ema --> it gives more weight to current data --> maybe makes more sense
+```
+
+```{r creating dataframes for each stock with 200days and 50days moving averages}
+library(tidyverse)
+library(tidyquant)
+
+#create a MCD dataframe with the important data
+MCD_dates <- select(MCD, date)
+MCD_dates
+
+data.frame_MCD <- data.frame(MCD_dates, sma_MCD_200, sma_MCD)
+data.frame_MCD
+
+#create a KO dataframe with the important data
+KO_dates <- select(KO, date)
+KO_dates
+
+data.frame_KO <- data.frame(KO_dates, sma_KO_200, sma_KO)
+data.frame_KO
+
+#create a WMT dataframe with the important data
+WMT_dates <- select(WMT, date)
+WMT_dates
+
+data.frame_WMT <- data.frame(WMT_dates, sma_WMT_200, sma_WMT)
+data.frame_WMT
+
+#creat a MMM dataframe with the important data
+MMM_dates <- select(MMM, date)
+MMM_dates
+
+data.frame_MMM <- data.frame(MMM_dates, sma_MMM_200, sma_MMM)
+data.frame_MMM
+```
+
+```{r compare the second and the third colomn and fill them with 0 & 1}
+# new column - fill with 0, but when 50day > 200 days, fill with 1
+
+data.frame_MCD['MCD'] <- 0
+data.frame_MCD$MCD[data.frame_MCD$sma_MCD > data.frame_MCD$sma_MCD_200] = 1
+
+data.frame_KO['KO'] <- 0
+data.frame_KO$KO[data.frame_KO$sma_KO > data.frame_KO$sma_KO_200] = 1
+
+data.frame_WMT['WMT'] <- 0
+data.frame_WMT$WMT[data.frame_WMT$sma_WMT > data.frame_WMT$sma_WMT_200] = 1
+
+data.frame_MMM['MMM'] <- 0
+data.frame_MMM$MMM[data.frame_MMM$sma_MMM > data.frame_MMM$sma_MMM_200] = 1
+```
+
+```{r sum up the colomn with 0 & 1}
+#so we find out how many 1's are there --> on how many days we want to invest out of all
+V_01 <- select(data.frame_MCD, MCD)
+colSums(V_01, na.rm = TRUE)
+
+nrow(data.frame_MCD)
+#calculate weight for MCD
+WEIGHT_MCD <- colSums(V_01, na.rm = TRUE)/nrow(data.frame_MCD)*100
+
+V_02 <- select(data.frame_KO, KO)
+colSums(V_02, na.rm = TRUE)
+
+nrow(data.frame_KO)
+#calculate weight for KO
+WEIGHT_KO <- colSums(V_02, na.rm = TRUE)/nrow(data.frame_KO)*100
+
+#calcuation for WMT
+V_03 <- select(data.frame_WMT, WMT)
+colSums(V_03, na.rm = TRUE)
+
+nrow(data.frame_WMT)
+#calculate weight WMT
+WEIGHT_WMT <- colSums(V_03, na.rm = TRUE)/nrow(data.frame_WMT)*100
+
+#calculation for MMM
+V_04 <- select(data.frame_MMM, MMM)
+colSums(V_04, na.rm = TRUE)
+
+nrow(data.frame_MMM)
+#calculate weight MMM
+WEIGHT_MMM <- colSums(V_04, na.rm = TRUE)/nrow(data.frame_MMM)*100
+```
+
+```{r}
+#weight calculation
+all_weights <- sum(WEIGHT_MCD, WEIGHT_KO, WEIGHT_MMM, WEIGHT_WMT)
+
+final_weight_MCD <- WEIGHT_MCD/all_weights
+final_weight_KO <- WEIGHT_KO/all_weights
+final_weight_MMM <- WEIGHT_MMM/all_weights
+final_weight_WMT <- WEIGHT_WMT/all_weights
+
+all_weights_tb <- tibble(final_weight_MCD, final_weight_KO, final_weight_WMT, final_weight_MMM)
+
+rowSums(all_weights_tb)
+```
+
+```{r }
+library(rvest)
+library(TTR)
+library(lubridate)
+```
+
+```{r create all the three portfolios}
+#create new table of weights
+weights_portfolio <- c(0.25, 0.25, 0.25, 0.25,
+            weights[1], weights[2], weights[3], weights[4],
+              final_weight_MCD, final_weight_KO, final_weight_WMT, final_weight_MMM)
+
+stocks <- c("MCD", "KO", "WMT", "MMM")
+
+weights_table <- tibble(stocks)%>%
+    tq_repeat_df(n = 3) %>%
+    bind_cols(tibble(weights_portfolio)) %>%
+    group_by(portfolio)
+
+weights_table
+```
+
+```{r we have to merge the expanded stock returns, the weights table for a portfolio aggregation}
+portfolio_returns_monthly_multi <- mult_monthly_returns_stocks %>%
+  tq_portfolio(assets_col = symbol,
+               returns_col = Ra,
+               weights = weights_table,
+               col_rename = "Ra")
+portfolio_returns_monthly_multi
+```
+
+```{r Merge with the baseline using date as the key}
+multiple_portfolio <- left_join(portfolio_returns_monthly_multi, monthly_returns_baseline, by = "date")
+multiple_portfolio
+```
+
+```{r performance calculation}
+multiple_portfolio %>%
+tq_performance(Ra = Ra, Rb = Rb, performance_fun = table.CAPM)
+```
+
+```{r}
+#Beta measures a security's sensitivity to market risk (the lower the better)
+#alpha - difference from expected and required return (the higher the better)
+```
+
+```{r}
+#Sharpe Ratio
+multiple_portfolio %>%
+  tq_performance(Ra = Ra, Rb = Rb, performance_fun = SharpeRatio)
+#the higher the Sharpe Ratio the better
+```
+
+Is the Sharpe quotient positive, the following applies: the higher the value of the Sharpe quotient, the better the performance of the invested investment in relation to the risk taken. If the Sharpe quotient is negative, the performance was worse than that of a risk-free investment.
+
 DO a performance analysis a la `vignette("TQ05-performance-analysis-with-tidyquant")`.
+```{r performance measurement}
+Market_Overview_CAPM
+Overview_CAPM
+```
 
 ## Exercise 2: The mu/sigma diagram
 
@@ -28,7 +307,76 @@ For the 10 stocks in your sample, calculate mu and sigma for the entire and 3 su
 
 Next, use the power of `tsibble` to calculate rolling/growing versions of mu and sigma (e.g. start with 6 months of data). Try to plot the changing mu and sigma via an animation using `gganimate` (see [here](https://www.datanovia.com/en/blog/gganimate-how-to-create-plots-with-beautiful-animation-in-r/)).
 
+
+```{r Data Entire}
+mult_stocks <- tq_get(c("AMZN","AAPL","MSFT","MCD","KO","GS","WMT","MMM","NKE","JNJ"),get = "stock.prices",from = "2000-01-01", to = "2020-09-24")
+mult_Ra <- c("AMZN","AAPL","MSFT","MCD","KO","GS","WMT","MMM","NKE","JNJ") %>% tq_get(get= "stock.prices", from ="2000-01-01", to = "2020-09-24") %>% group_by(symbol) %>% tq_transmute(select = adjusted, mutate_fun = periodReturn, period ="yearly",col_rename = "Mu")
+mult_sigma <- c("AMZN","AAPL","MSFT","MCD","KO","GS","WMT","MMM","NKE","JNJ") %>% tq_get(get= "stock.prices", from ="2000-01-01", to = "2020-09-24") %>% group_by(symbol) %>% tq_transmute(select = adjusted, mutate_fun = periodReturn, period ="yearly",col_rename = "Sigma")
+```
+
+
+```{r Mu/Sigma}
+#In order to stack them to together makes a little bit easier.
+mu_Ra <- aggregate(mult_Ra[3:3],list(mult_Ra$symbol),mean)
+sigma_Ra <- aggregate(mult_sigma[3:3],list(mult_Ra$symbol),mean.stderr)
+mult_musig <- left_join(mu_Ra, sigma_Ra, by = "Group.1")
+```
+
+```{r Plotting}
+ggplot(mult_musig,aes(x=Sigma, y=Mu,label=Group.1)) + geom_point(alpha =0.6) + coord_fixed() + scale_x_log10() + scale_y_log10() +
+geom_text(aes(label=Group.1),hjust=0, vjust=0)
+```
+
 ```{r}
+ggplot(mult_musig,aes(x=Sigma, y=Mu)) + geom_point(alpha =0.6) + coord_fixed() + scale_x_log10() + scale_y_log10() + stat_smooth(method = "lm",col = "#C42126",se = FALSE, size=1)
+```
+
+```{r 1rst subperiod}
+mult_period <- tq_get(c("AMZN","AAPL","MSFT","MCD","KO","GS","WMT","MMM","NKE","JNJ"),get = "stock.prices",from ="2005-01-01", to = "2020-09-24")
+mult_Ra_period <- c("AMZN","AAPL","MSFT","MCD","KO","GS","WMT","MMM","NKE","JNJ") %>% tq_get(get= "stock.prices", from ="2005-01-01", to = "2020-09-24") %>% group_by(symbol) %>% tq_transmute(select = adjusted, mutate_fun = periodReturn, period ="yearly",col_rename = "Mu")
+mult_sigma_period <- c("AMZN","AAPL","MSFT","MCD","KO","GS","WMT","MMM","NKE","JNJ") %>% tq_get(get= "stock.prices", from ="2005-01-01", to = "2020-09-24") %>% group_by(symbol) %>% tq_transmute(select = adjusted, mutate_fun = periodReturn, period ="yearly",col_rename = "Sigma")
+
+mu_Ra_period <- aggregate(mult_Ra_period[3:3],list(mult_Ra_period
+$symbol),mean)
+sigma_Ra_period <- aggregate(mult_sigma_period[3:3],list(mult_Ra_period$symbol),mean.stderr)
+mult_musig_period <- left_join(mu_Ra_period, sigma_Ra_period, by = "Group.1")
+
+ggplot(mult_musig_period,aes(x=Sigma, y=Mu, lable = Group.1)) + geom_point(alpha =0.6) + coord_fixed() + scale_x_log10() + scale_y_log10() + geom_text(aes(label=Group.1),hjust=0, vjust=0)
+```
+
+```{r 2nd subperiod}
+mult_period_nd <- tq_get(c("AMZN","AAPL","MSFT","MCD","KO","GS","WMT","MMM","NKE","JNJ"),get = "stock.prices",from = "2010-01-01", to = "2020-09-24")
+mult_Ra_period_nd <- c("AMZN","AAPL","MSFT","MCD","KO","GS","WMT","MMM","NKE","JNJ") %>% tq_get(get= "stock.prices", from ="2010-01-01", to = "2020-09-24") %>% group_by(symbol) %>% tq_transmute(select = adjusted, mutate_fun = periodReturn, period ="yearly",col_rename = "Mu")
+mult_sigma_period_nd <- c("AMZN","AAPL","MSFT","MCD","KO","GS","WMT","MMM","NKE","JNJ") %>% tq_get(get= "stock.prices", from ="2010-01-01", to = "2020-09-24") %>% group_by(symbol) %>% tq_transmute(select = adjusted, mutate_fun = periodReturn, period ="yearly",col_rename = "Sigma")
+
+mu_Ra_period_nd <- aggregate(mult_Ra_period_nd[3:3],list(mult_Ra_period_nd$symbol),mean)
+sigma_Ra_period_nd <- aggregate(mult_sigma_period_nd[3:3],list(mult_Ra_period_nd$symbol),mean.stderr)
+mult_musig_period_nd <- left_join(mu_Ra_period_nd, sigma_Ra_period_nd, by = "Group.1")
+
+ggplot(mult_musig_period_nd,aes(x=Sigma, y=Mu, label=Group.1)) + geom_point(alpha =0.6) + coord_fixed() + scale_x_log10() + scale_y_log10() + geom_text(aes(label=Group.1),hjust=0, vjust=0)
+```
+
+```{r 3rd subperiod}
+mult_period_rd <- tq_get(c("AMZN","AAPL","MSFT","MCD","KO","GS","WMT","MMM","NKE","JNJ"),get = "stock.prices",from = "2002-01-01", to = "2020-09-24")
+mult_Ra_period_rd <- c("AMZN","AAPL","MSFT","MCD","KO","GS","WMT","MMM","NKE","JNJ") %>% tq_get(get= "stock.prices", from ="2002-01-01", to = "2020-09-24") %>% group_by(symbol) %>% tq_transmute(select = adjusted, mutate_fun = periodReturn, period ="yearly",col_rename = "Mu")
+mult_sigma_period_rd <- c("AMZN","AAPL","MSFT","MCD","KO","GS","WMT","MMM","NKE","JNJ") %>% tq_get(get= "stock.prices", from ="2002-01-01", to = "2020-09-24") %>% group_by(symbol) %>% tq_transmute(select = adjusted, mutate_fun = periodReturn, period ="yearly",col_rename = "Sigma")
+
+mu_Ra_period_rd <- aggregate(mult_Ra_period_rd[3:3],list(mult_Ra_period_rd$symbol),mean)
+sigma_Ra_period_rd <- aggregate(mult_sigma_period_rd[3:3],list(mult_Ra_period_rd$symbol),mean.stderr)
+mult_musig_period_rd <- left_join(mu_Ra_period_rd, sigma_Ra_period_rd, by = "Group.1")
+
+ggplot(mult_musig_period_rd,aes(x=Sigma, y=Mu, label=Group.1)) + geom_point(alpha =0.6) + coord_fixed() + scale_x_log10() + scale_y_log10() + geom_text(aes(label=Group.1),hjust=0, vjust=0)
+```
+
+
+To get a bigger picture, stacking all plots in order.
+
+```{r Stacking all plots}
+plot <- ggplot() + geom_point(data = mult_musig, aes(x=Sigma, y=Mu), color='green') + geom_point(data = mult_musig_period, aes(x=Sigma, y= Mu), color='red') + geom_point(data = mult_musig_period_nd ,aes(x = Sigma, y=Mu),color = 'blue') + geom_point(data= mult_musig_period_rd, aes(x=Sigma, y=Mu), color= 'orange')
+plot
+```
+
+```{r Example}
 pacman::p_load(gganimate,gifski,png,gapminder)
 p <- ggplot(
 gapminder,
@@ -44,9 +392,238 @@ p + transition_time(year) +
 labs(title = "Year: {frame_time}")
 ```
 
+```{r Data}
+ov_mult_stocks <- tq_get(c("AMZN","AAPL","MSFT","MCD","KO","GS","
+WMT","MMM","NKE","JNJ"),get = "stock.prices",from = "2020-01-01", to = "2020-09-24")
+ov_try_periode <- c("AMZN","AAPL","MSFT","MCD","KO","GS","WMT","MMM","NKE","JNJ") %>% tq_get(get= "stock.prices", from ="2020-01-01", to = "2020-09-24") %>% group_by(symbol) %>% tq_transmute(select =adjusted, mutate_fun = periodReturn, period ="daily",col_rename = "Return")
+try_periode <- c("AMZN","AAPL","MSFT","MCD","KO","GS","WMT","MMM","NKE","JNJ") %>% tq_get(get= "stock.prices", from ="2020-01-01", to = "2020-09-24") %>% group_by(symbol) %>% tq_transmute(select = adjusted, mutate_fun = periodReturn, period ="daily",col_rename = "Sigma")
+```
+
+```{r Transfroming Data}
+mean_try <- aggregate(ov_try_periode[3:3],list(ov_try_periode$symbol),mean)
+names(mean_try)[names(mean_try) == "Group.1"] <- "symbol"
+ov_pp <- left_join(ov_try_periode, mean_try)
+
+sigma_try <- aggregate(try_periode [3:3],list(try_periode$symbol)
+, mean.stderr )
+names(sigma_try)[names(sigma_try) == "Group.1"] <- "symbol"
+ov_fin <- left_join(ov_pp, sigma_try)
+```
+
+```{r animated dataset returns and sigma 2020}
+p <- ggplot(
+ov_fin,
+aes(x = Sigma, y= Return, size = Return, colour = symbol)
+) +
+geom_point(show.legend = FALSE, alpha = 0.7) +
+scale_color_viridis_d() +
+scale_size(range = c(2, 12)) +
+scale_x_log10() +
+labs(x = "Risk", y = "Return")
+p
+p + transition_time(date) +
+labs(title = "date: {frame_time}")
+```
+
 ## Exercise 3: Rolling regressions
 
 Perform static and rolling regressions of four of your assets (monthly data, yearly window) on the S&P500 as well as the three Fama-French Factors (Mkt.RF, SMB and HML). Visualize the changing alphas and betas over time. You can use [this example](https://www.business-science.io/code-tools/2017/04/04/tidyquant-0-5-0.html), but I would prefer a use of the `tsibble`-package.
 
 
+```{r Exercise_3}
+#### Rolling regressions ####
+# a)
+SP500_Stocks <- tq_index("S&P500")
+# b) Download stock prices of stocks that had information at the 29.Dec.2000. 
+#    Slice them to only select 10!
+SP500_2000 <- tq_get(SP500_Stocks,
+                      get  = "stock.prices",
+                      from = "2000-12-01",
+                      to   = "2000-12-31", periode = "monthly")
+```
+
+SP500_2<-c("AAPL", "GOOG", "NFLX", "AMZN") %>% tq_get(get  = "stock.prices",from = "2000-12-25", to   = "2018-12-31")
+
+SP500_2000<-slice(SP500_2,1:10)
+
+#DOWNLOADING FARMA FRENCH 
+```{r Exercise_3 FFdownload and load factors}
+factors_data_address <- 
+"http://mba.tuck.dartmouth.edu/pages/faculty/ken.french/ftp/Global_3_Factors_CSV.zip"
+factors_csv_name <- "Global_3_Factors.csv"
+temp <- tempfile()
+#download the factors
+download.file(
+  # location of file to be downloaded
+  factors_data_address,
+  # where we want R to store that file
+  temp, 
+  quiet = TRUE)
+
+#Read the file and get the data between 2000-01-01 and 2018-12-31
+factors <- 
+  read_csv(unz(temp, "Global_3_Factors.csv"), 
+           skip = 3) %>% 
+  dplyr::rename(date = X1) %>% 
+  dplyr::rename(mktrf = 'Mkt-RF') %>%
+  dplyr::rename(rf = RF) %>%
+  mutate_at(vars(-date), as.numeric) %>% 
+  mutate(date = 
+           rollback(ymd(parse_date_time(date, "%Y%m") + months(1))))%>% 
+  filter(date >= 
+   first('2000-01-01') & date <=  
+   '2018-12-31')
+names(factors)[names(factors) == "date"] <- "X1" %>%
+names(factors)[names(factors) == "mktrf"] <- "MktRF" %>%
+names(factors)[names(factors) == "rf"] <- "RF" %>%
+```
+
+
+########## MONTHLY STOCK RETURNS ##########
+```{r Exercise_3 Monthly Stock returns}
+#### Monthly Stock returns for 4 Stocks ####
+pacman::p_load(tidyverse,tidyquant,timetk)
+fama_french <- filter(factors, date >= as.Date("2000-01-01"), date <= as.Date("2019-08-31"))
+fama_french <- fama_french %>%
+    select(date, mktrf, rf)
+fama_french
+# Create a function to deliver the monthly returns since 2000-01-01
+get_monthly_returns <- function(symbol){
+  return <- tq_transmute(tq_get(symbol,
+                                get = "stock.prices",
+                                from = "2000-01-01",
+                                to = "2019-08-31"),
+                         select = adjusted,
+                         col_rename = "monthly_return",
+                         mutate_fun = periodReturn,
+                         period = "monthly") %>%
+    mutate(monthly_return = monthly_return * 100)
+}
+
+# Get the returns for four stocks
+mcd_return <- get_monthly_returns("MCD")
+ko_return <- get_monthly_returns("KO")
+wmt_return <- get_monthly_returns("WMT")
+mmm_return <- get_monthly_returns("MMM")
+#merge the two datasets (stock return & fama_french)
+joined_data_mcd <- left_join(mcd_return, fama_french, by = NULL)
+joined_data_mcd
+joined_data_ko <- left_join(ko_return, fama_french, by = NULL)
+joined_data_ko
+joined_data_wmt <- left_join(wmt_return, fama_french, by = NULL)
+joined_data_wmt
+joined_data_mmm <- left_join(mmm_return, fama_french, by = NULL)
+joined_data_mmm
+```
+
+
+######## RETURNS MINUS RISK FREE RATE ##########
+```{r Exercise_3 Set risk factors}
+#### Combine monthly Stock returns and risk factors ####
+#Remembering that the left side of the CAPM formula is CSCO return minus the risk free rate, we calculate that as well
+joined_data_mcd <- mutate(joined_data_mcd, monthly_ret_rf = monthly_return - rf)
+joined_data_ko <- mutate(joined_data_ko, monthly_ret_rf = monthly_return - rf)
+joined_data_wmt <- mutate(joined_data_wmt, monthly_ret_rf = monthly_return - rf)
+joined_data_mmm <- mutate(joined_data_mmm, monthly_ret_rf = monthly_return - rf)
+```
+
+######## Rolling CAPM OF 4 STOCKS ###############
+```{r Exercise_3 Add the Rolling CAPM}
+####  Add the Rolling CAPM to the Tibble for each Stock ####
+require(zoo)
+#rolling CAPM CSCO
+
+add_rolling_capm <- function(joined_data_symbol){
+  regr_fun <- function(data_xts) {
+    lm(monthly_ret_rf ~ mktrf, data = as_tibble(data_xts)) %>% coef()
+  }
+  
+  return <- joined_data_symbol %>%
+    tq_mutate(mutate_fun = rollapply,
+              width = 60, # 60 data (tibble) rows // 60 rows / 12 months = 5 years
+              FUN = regr_fun,
+              by.column = FALSE,
+              col_rename = c("alpha", "beta"))
+}
+joined_data_mcd <- add_rolling_capm(joined_data_mcd)
+joined_data_ko <- add_rolling_capm(joined_data_ko)
+joined_data_wmt <- add_rolling_capm(joined_data_wmt)
+joined_data_mmm <- add_rolling_capm(joined_data_mmm)
+```
+
+#########Plotting alpha ######
+```{r Exercise_3 Plot alpha}
+#### plot alpha ####
+create_alpha_plot <- function(joined_data_symbol, title) {
+  filter(joined_data_symbol, !is.na(alpha)) %>%
+    ggplot(aes(x = date, y = alpha)) + 
+        geom_line(size = 1, color = palette_light()[[1]]) + 
+        geom_smooth() +
+        labs(title = title, x = "") +
+        theme_tq(base_size = 18)
+}
+
+create_alpha_plot(joined_data_mcd, "McDonald´s: 5 year rolling CAPM - alpha")
+create_alpha_plot(joined_data_ko, "Coca-Cola: 5 year rolling CAPM - alpha")
+create_alpha_plot(joined_data_wmt, "Walmart: 5 year rolling CAPM - alpha")
+create_alpha_plot(joined_data_mmm, "3M: 5 year rolling CAPM - alpha")
+```
+
+#####Plotting beta####
+```{r Exercise_3 Plot beta}
+
+#### plot beta ####
+create_beta_plot <- function(joined_data_symbol, title) {
+  filter(joined_data_symbol, !is.na(alpha)) %>%
+  ggplot(aes(x = date, y = beta))  + 
+      geom_rect(xmin = as.numeric(ymd("2008-01-01")), 
+                xmax = as.numeric(ymd("2009-03-01")), 
+                ymin = 0, ymax = 10.0, 
+                fill = palette_light()[[4]], alpha = 0.01) + 
+      geom_line(size = 1, color = palette_light()[[1]]) +
+      labs(title = title, x = "") + 
+      theme_tq(base_size = 18)
+}
+
+create_beta_plot(joined_data_mcd, "McDonald´s: 5 year rolling CAPM - beta")
+create_beta_plot(joined_data_ko, "Coca-Cola: 5 year rolling CAPM - beta")
+create_beta_plot(joined_data_wmt, "Walmart: 5 year rolling CAPM - beta")
+create_beta_plot(joined_data_mmm, "3M: 5 year rolling CAPM - beta")
+```
+
+```{r Exercise_3 Plot all}
+
+#### Ploting all four CAPM alpha ####
+# union two dataframes without duplicates 
+joined_data <- rbind(
+  add_column(select(joined_data_mcd, alpha, beta, date), "symbol" = "MCD"),
+  add_column(select(joined_data_mmm, alpha, beta, date), "symbol" = "MMM"),
+  add_column(select(joined_data_wmt, alpha, beta, date), "symbol" = "WMT"),
+  add_column(select(joined_data_ko, alpha, beta, date), "symbol" = "KO")
+)
+joined_data <- filter(joined_data, date >= as.Date("2005-01-01"))
+joined_data %>%
+    ggplot(aes(x = date, y = alpha)) +
+    geom_line(size = 1, color = palette_light()[[1]]) + 
+    geom_smooth() +
+    labs(title = "Stocks: 5 year rolling CAPM - alpha", x = "",
+         subtitle = "Rolling alpha is steadily trending upwards") +
+    facet_wrap(~ symbol, ncol = 2) +
+    theme_tq()
+```
+
+
+```{r}
+#### Ploting all four CAPM beta ####
+joined_data %>%
+ggplot(aes(x = date, y = beta))  + 
+    geom_rect(xmin = as.numeric(ymd("2008-01-01")), 
+              xmax = as.numeric(ymd("2009-03-01")), 
+              ymin = 0, ymax = 10.0, 
+              fill = palette_light()[[4]], alpha = 0.01) + 
+    geom_line(size = 1, color = palette_light()[[1]]) +
+    labs(title = "Stocks: 5 year rolling CAPM - beta", x = "") +
+    facet_wrap(~ symbol, ncol = 2) +
+    theme_tq(base_size = 18)
+```
 
